Fix non visible sponsors fix img home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11370,6 +11370,8 @@ a.text-dark:focus {
   border-radius: 5px;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border: 1px solid #1f022225;
 }
 
@@ -11499,7 +11501,7 @@ div.carousel.slide.bnb-slide a.carousel-control-next.bnb-carouselInd {
 }
 
 .bnb-flatsContainerB .bnb-cardBoxAll {
-  height: 250px;
+  height: 265px;
   overflow-x: scroll;
   padding-top: 15px;
   min-width: 360px;
@@ -11526,6 +11528,8 @@ div.carousel.slide.bnb-slide a.carousel-control-next.bnb-carouselInd {
   border-radius: 5px;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border: 1px solid #1f022225;
 }
 
